main principale creato + modifiche su archivio